Modified to reflect Model choices and Output Directory for Huggingface

--- a/gemma_3_1b_it_test.ipynb
+++ b/gemma_3_1b_it_test.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "mount_file_id": "1Sz9yfAjEelenELysPhPIDMduaD73m7wq",
-      "authorship_tag": "ABX9TyNCV/sktKrrAdOC6aS597/n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/prikshitkverma/Gemma_fine_tuning/blob/main/gemma_3_1b_it_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gramdishatrust/VARTA-AI/blob/main/gemma_3_1b_it_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -158,7 +156,13 @@
         "# 3. CONFIGURE MODEL AND DIRECTORIES\n",
         "# ============================================\n",
         "base_model = \"google/gemma-3-1b-it\"\n",
-        "output_dir = \"./gemma-natural-farming-qa\"\n",
+        "#Modify base models as per need\n",
+        "#base_model = \"HuggingFaceTB/SmolLM2-1.7B-Instruct\"\n",
+        "#base_model = \"meta-llama/Llama-3.2-1B-Instruct\"\n",
+        "#base_model = \"Qwen/Qwen2.5-0.5B-Instruct\"\n",
+        "\n",
+        "#all Model files shall be located in this dir for transfer to Huggingface\n",
+        "output_dir = \"./xLM-natural-farming-qa\"\n",
         "\n",
         "\n",
         "# ============================================\n",
@@ -469,8 +473,7 @@
         "    messages = [{\"role\": \"user\", \"content\": question}]\n",
         "    prompt = tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
         "    outputs = test_pipe(prompt, max_new_tokens=256)\n",
-        "    print(f\"\\n🧠 Answer:\\n{outputs[0]['generated_text'][len(prompt):].strip()}\")\n",
-        ""
+        "    print(f\"\\n🧠 Answer:\\n{outputs[0]['generated_text'][len(prompt):].strip()}\")\n"
       ],
       "metadata": {
         "id": "UqXlSXcRFDlv"
